--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
-    "mongoose": "^5.13.5"
+    "method-override": "^3.0.0",
+    "mongoose": "^5.13.5",
+    "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
